--- a/moon.html
+++ b/moon.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Moon Webpage</title>
 </head>
 <body>
+   <h1>The Moon</h1>
+   <h3>A Natural Satellite</h3>
+   <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
+   <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon">
     
 </body>
 </html>
