--- a/moon.html
+++ b/moon.html
@@ -8,7 +8,7 @@
    <h1>The Moon</h1>
    <h3>A Natural Satellite</h3>
    <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
-   <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon">
+   <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon" alt="An image of the moon">
     
 </body>
 </html>
