--- a/moon.html
+++ b/moon.html
@@ -7,12 +7,12 @@
 <body>
    <h1>The Moon</h1>
    <h3>A Natural Satellite</h3>
-<<<<<<< HEAD
-   <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1⁄81 its' mass.</p>
-=======
    <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
-   <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon" alt="An image of the moon">
+   <figure>
+       <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon" alt="An image of the moon">
+       <figcaption>The Moon as seen from Ottawa.</figcaption>
+   </figure>
+   
     
->>>>>>> 49452f263f398fff368ce549d286c4ba30ab5ddd
 </body>
 </html>
