--- a/moon.html
+++ b/moon.html
@@ -15,7 +15,7 @@
    <h2>A Natural Satellite</h2>
    <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
    <figure>
-        <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon" alt="An image of the moon">
+        <img src="http://www.space.com/images/i/000/029/533/original/full-moon-juarez-mexico.jpg" width="400px" height="250px" alt="Image of the moon" alt="An image of the moon">
         <figcaption>
             The moon as seen from Ottawa.
         </figcaption>
@@ -42,10 +42,9 @@
        <p>Apollo 12 was the sixth manned flight in the United States Apollo program and
         the second to land on the Moon (an H type mission). It was launched on
         November 14, 1969 from the Kennedy Space Center, Florida, four months after
-        Apollo 11. Source: <a href=": http://en.wikipedia.org/wiki/Apollo_12">: http://en.wikipedia.org/wiki/Apollo_12</a>  </p>
+        Apollo 11. Source: <a href=": http://en.wikipedia.org/wiki/Apollo_12">: http://en.wikipedia.org/wiki/Apollo_12</a></p>
        </li>
    </ol>
   
-    
 </body>
 </html>
