--- a/moon.html
+++ b/moon.html
@@ -15,15 +15,8 @@
    <h2>A Natural Satellite</h2>
    <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
    <figure>
-<<<<<<< HEAD
-        <img src="http://www.space.com/images/i/000/029/533/original/full-moon-juarez-mexico.jpg" width="400px" height="250px" alt="Image of the moon" alt="An image of the moon">
-=======
-
-        <img src="https://prof3ssorst3v3.github.io/mad9013/the-moon.png" alt="Image of the moon" alt="An image of the moon">
->>>>>>> 04325e2b450872f043e3b1ecb02e7ae312ba76f6
-        <figcaption>
-            The moon as seen from Ottawa.
-        </figcaption>
+        <img src="http://www.space.com/images/i/000/029/533/original/full-moon-juarez-mexico.jpg" width="400px" height="250px" alt="Image of the moon">
+       <figcaption>The moon as seen from Ottawa.</figcaption>
    </figure>
    <h3>Statistics</h3>
    <ul>
@@ -50,12 +43,4 @@
         Apollo 11. Source: <a href=": http://en.wikipedia.org/wiki/Apollo_12">: http://en.wikipedia.org/wiki/Apollo_12</a></p>
        </li>
    </ol>
-<<<<<<< HEAD
-  
-=======
- 
-   
-    
->>>>>>> 04325e2b450872f043e3b1ecb02e7ae312ba76f6
-</body>
 </html>
