--- a/moon.html
+++ b/moon.html
@@ -16,9 +16,7 @@
    <p>The Moon is the only natural satellite of the Earth, and the fifth largest satellite in the Solar System. It is the largest natural satellite of a planet in the Solar System relative to the size of its primary, having a quarter the diameter of Earth but only 1/81 its' mass.</p>
    <figure>
         <img src="http://www.space.com/images/i/000/029/533/original/full-moon-juarez-mexico.jpg" width="400px" height="250px" alt="Image of the moon" alt="An image of the moon">
-        <figcaption>
-            The moon as seen from Ottawa.
-        </figcaption>
+        <figcaption>The moon as seen from Ottawa.</figcaption>
    </figure>
    <h3>Statistics</h3>
    <ul>
